--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -1,8 +1,10 @@
 version: '3.8'
 
 services:
+  # 1. The Database Service (MySQL)
   db:
     image: mysql:8.0
+    # These environment variables configure the MySQL database inside the container.
     environment:
       MYSQL_ROOT_PASSWORD: rootpassword
       MYSQL_DATABASE: resume_matcher
@@ -16,36 +18,41 @@ services:
       - resume-net
     command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
 
+  # 2. The Backend API Service
   backend:
     build:
-      context: ..
-      dockerfile: dockerfile
+      context: .. # The build context is the project root directory
+      dockerfile: Dockerfile # It uses the Dockerfile in the root directory
     env_file:
-      - ../.env
+      - ../.env # It loads all the variables from your .env file
     ports:
-      - "8000:8080" 
+      # Maps your local machine's port 8000 to the container's port 8080
+      - "8000:8080"
     depends_on:
-      - db
+      - db # This tells Docker to wait for the database to start before starting the backend
     networks:
       - resume-net
 
+  # 3. The Frontend Streamlit Service
   frontend:
     build:
-      context: ..
-      dockerfile: frontend/Dockerfile
+      context: .. # The build context is also the project root
+      dockerfile: frontend/Dockerfile # It uses the Dockerfile inside your frontend/ directory
     env_file:
-      - ../.env
+      - ../.env # It also loads the .env file to get the API_URL
     ports:
+      # Maps your local machine's port 8501 to the container's port 8080
       - "8501:8080"
     depends_on:
-      - backend
+      - backend # It waits for the backend to be ready before starting
     networks:
       - resume-net
 
-
+# Defines the private network that allows the containers to communicate with each other
 networks:
   resume-net:
     driver: bridge
 
+# Defines the volume to persist database data
 volumes:
   db_data:
